# helmet_detection

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
Resources/python/: detect.py  get_first_frame.py  process_camera.py  process_video.py
